fixed api docs build

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
       # Adjuk hozzá ezt a lépést, hogy az API specifikáció is felépüljön.
       - name: Build API Docs
-        run: npm docusaurus gen-api-docs all
+        run: npm run docusaurus gen-api-docs all
       - name: Build website
         run: npm build
 
